--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,18 +26,23 @@ include_directories(${CMAKE_SOURCE_DIR}/src)
 
 message(STATUS "System:${CMAKE_SYSTEM_NAME}")
 if(${CMAKE_SYSTEM_NAME} MATCHES "Emscripten")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -s USE_ZLIB=1")
-    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -s USE_ZLIB=1")
-    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -s USE_ZLIB=1")
-endif()
-
-# Find ZLIB (optional for MiniSat)
-find_package(ZLIB QUIET)
-if(ZLIB_FOUND)
-    message(STATUS "ZLIB found: ${ZLIB_LIBRARIES}")
-    include_directories(${ZLIB_INCLUDE_DIRS})
+    # Use Emscripten's built-in zlib port
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -sUSE_ZLIB=1")
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -sUSE_ZLIB=1")
+    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -sUSE_ZLIB=1")
+    # Mark ZLIB as found for Emscripten (it will be provided by the port)
+    set(ZLIB_FOUND TRUE)
+    set(ZLIB_LIBRARIES "")
+    message(STATUS "ZLIB: Using Emscripten port")
 else()
-    message(STATUS "ZLIB not found - MiniSat will be built without gzip support")
+    # Find system ZLIB (optional for MiniSat)
+    find_package(ZLIB QUIET)
+    if(ZLIB_FOUND)
+        message(STATUS "ZLIB found: ${ZLIB_LIBRARIES}")
+        include_directories(${ZLIB_INCLUDE_DIRS})
+    else()
+        message(STATUS "ZLIB not found - MiniSat will be built without gzip support")
+    endif()
 endif()
 
 # MiniSat library sources
