--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -88,10 +88,6 @@ jobs:
             os: windows-latest
             target: x86_64-pc-windows-msvc
             bundles: msi,nsis
-          - name: macOS (Intel)
-            os: macos-13
-            target: x86_64-apple-darwin
-            bundles: dmg
           - name: macOS (Apple Silicon)
             os: macos-14
             target: aarch64-apple-darwin
@@ -116,9 +112,8 @@ jobs:
           cache-dependency-path: frontend/package-lock.json
 
       - name: Install Rust stable
-        uses: dtolnay/rust-action@stable
-        with:
-          targets: ${{ matrix.platform.target }}
+        run: |
+          curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain stable
 
       - name: Install dependencies (Ubuntu)
         if: runner.os == 'Linux'
