--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,24 +6,26 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
+    "build:tauri": "cross-env TAURI_PLATFORM=1 vue-tsc -b && cross-env TAURI_PLATFORM=1 vite build",
     "preview": "vite preview",
     "tauri": "tauri",
     "tauri:dev": "tauri dev",
     "tauri:build": "tauri build"
   },
   "dependencies": {
-    "vue": "^3.5.24",
-    "@vueuse/core": "^11.0.0"
+    "@vueuse/core": "^11.0.0",
+    "vue": "^3.5.24"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^2.0.0",
     "@tauri-apps/api": "^2.0.0",
+    "@tauri-apps/cli": "^2.0.0",
     "@types/node": "^22.0.0",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.8.1",
+    "cross-env": "^10.1.0",
+    "sass": "^1.77.0",
     "typescript": "~5.9.3",
     "vite": "^7.2.4",
-    "vue-tsc": "^3.1.4",
-    "sass": "^1.77.0"
+    "vue-tsc": "^3.1.4"
   }
 }
